--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="text-gray-600 body-font bg-gray-100">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
       <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-        <img src="/images/LOGO/Vectors/LOGO light small.svg" class="w-8 h-8 p-1 bg-gray-100 shadow-lg rounded" alt="logo">
+        <img src="/images/logo-sm.svg" class="w-8 h-8 p-1 bg-gray-100 shadow-lg rounded" alt="logo">
         <span class="ml-3 text-xl rubik-700">Èlectronique</span>
       </a>
       <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
@@ -87,7 +87,7 @@
 
     </div>
     <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
-      <div class="p-6 bg-gray-100 bg-opacity-10 glass-card rounded-lg shadow-md">
+      <div class="p-6 bg-gray-50 bg-opacity-10 backdrop-blur-[16px] rounded-lg shadow-md">
         <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium"> Hackathon Ipsum 
           <br class="hidden lg:inline-block">Tempor dolor sit amet.
         </h1>
@@ -102,14 +102,14 @@
   <!-- abt -->
   <section class="text-gray-600 body-font">
     <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
-      <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
-        <img class="object-cover object-center rounded" alt="hero" src="images/LOGO/Vectors/LightMode LOGO transparent.svg">
+      <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 ">
+        <img class="ml-32 object-cover object-center rounded" alt="hero" src="images/logo-card.svg">
       </div>
       <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
         <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">
           Who We Are
         </h1>
-        <p class="mb-8 leading-relaxed">Copper mug try-hard pitchfork pour-over freegan heirloom neutra air plant cold-pressed tacos poke beard tote bag. Heirloom echo park mlkshk tote bag selvage hot chicken authentic tumeric truffaut hexagon try-hard chambray. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non sequi debitis officia voluptatum eos deleniti voluptatibus dolorem explicabo totam blanditiis maxime cum, ea reiciendis necessitatibus, eius fugit? Corporis, accusantium corrupti! Impedit doloremque numquam veritatis sequi.</p>
+        <p class="mb-8 leading-relaxed">Copper mug try-hard pitchfork pour-over freegan heirloom neutra air plant cold-pressed tacos poke beard tote bag. Heirloom echo park mlkshk tote bag selvage hot chicken authentic tumeric truffaut hexagon try-hard chambray. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non sequi debitis officia voluptatum eos deleniti voluptatibus dolorem explicabo totam blanditiis maxime cum, ea reiciendis necessitatibus, eius fugit? Corporis, accusantium corrupti! Impedit doloremque numquam veritatis sequi. </p>
         <!-- <div class="flex justify-center">
           <button class="inline-flex text-white bg-blue-500 border-0 py-2 px-6 focus:outline-none hover:bg-blue-600 rounded text-lg">Button</button>
           <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">Button</button>
@@ -123,7 +123,7 @@
     <div class="container px-5 py-24 mx-auto">
       <div class="flex flex-col">
         <div class="h-1 bg-gray-200 rounded overflow-hidden">
-          <div class="w-24 h-full bg-indigo-500"></div>
+          <div class="w-24 h-full bg-blue-500"></div>
         </div>
         <div class="flex flex-wrap sm:flex-row flex-col py-6 mb-12">
           <h1 class="sm:w-2/5 text-gray-900 font-medium title-font text-4xl mb-2 sm:mb-0">Upcoming Events </h1>
@@ -385,21 +385,18 @@
 </section>
 
       <!-- contact -->
-      <section class="bg-blue-600 text-gray-600 body-font">
+      <section class="text-white body-font contact">
         <div class="container px-5 py-24 mx-auto">
           <div class="lg:w-2/3 flex flex-col sm:flex-row sm:items-center items-start mx-auto">
-            <h1 class="flex-grow sm:pr-16 text-2xl font-medium title-font text-gray-900">Slow-carb next level shoindxgoitch ethical authentic, scenester sriracha forage.</h1>
-            <button class="flex-shrink-0 text-white bg-blue-500 border-0 py-2 px-8 focus:outline-none hover:bg-blue-600 rounded text-lg mt-10 sm:mt-0">Button</button>
+            <h1 class="flex-grow sm:pr-16 text-2xl font-medium title-font">Get into touch.</h1>
+            <button class="flex-shrink-0 text-blue-600 bg-white border-0 py-2 px-8 focus:outline-none hover:bg-blue-600 rounded-lg text-lg mt-10 sm:mt-0">Contact Us</button>
           </div>
         </div>
-      </section>    
   <!-- footer -->
-  <footer class="text-gray-600 body-font">
+  <footer class="bg-gray-100 bg-opacity-10 text-gray-50 body-font">
     <div class="container px-5 py-4 mx-auto flex items-center sm:flex-row flex-col">
       <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-blue-500 rounded-full" viewBox="0 0 24 24">
-          <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-        </svg>
+        <img src="/images/logo-sm.svg" class="w-8 h-8 p-1 bg-gray-100 shadow-lg rounded" alt="logo">
         <span class="ml-3 text-xl">Èlectronique</span>
       </a>
       <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2020 Èlectronique —
@@ -431,6 +428,7 @@
       </span>
     </div>
   </footer>
+</section>    
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
