--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="text-gray-600 body-font bg-gray-100">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
       <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-        <img src="/images/logo-sm.svg" class="w-8 h-8 p-1 bg-gray-100 shadow-lg rounded" alt="logo">
+        <img src="/Images/logo-sm.svg" class="w-8 h-8 p-1 bg-gray-100 shadow-lg rounded" alt="logo">
         <span class="ml-3 text-xl rubik-700">Èlectronique</span>
       </a>
       <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
@@ -84,7 +84,6 @@
     <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
       <!-- <img class="object-cover object-center rounded" alt="hero" src="https://dummyimage.com/720x600"> -->
       <h1 class="title-font font-bold text-6xl mb-4">Spotlight <br> Event</h1>
-
     </div>
     <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
       <div class="p-6 bg-gray-50 bg-opacity-10 backdrop-blur-[16px] rounded-lg shadow-md">
@@ -103,7 +102,7 @@
   <section class="text-gray-600 body-font">
     <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
       <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0 ">
-        <img class="ml-32 object-cover object-center rounded" alt="hero" src="images/logo-card.svg">
+        <img class="ml-32 object-cover object-center rounded" alt="hero" src="Images/logo-card.svg">
       </div>
       <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
         <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">
@@ -385,7 +384,7 @@
 </section>
 
       <!-- contact -->
-      <section class="text-white body-font contact">
+      <section class="text-white body-font bg-blue-600 contact">
         <div class="container px-5 py-24 mx-auto">
           <div class="lg:w-2/3 flex flex-col sm:flex-row sm:items-center items-start mx-auto">
             <h1 class="flex-grow sm:pr-16 text-2xl font-medium title-font">Get into touch.</h1>
@@ -396,7 +395,7 @@
   <footer class="bg-gray-100 bg-opacity-10 text-gray-50 body-font">
     <div class="container px-5 py-4 mx-auto flex items-center sm:flex-row flex-col">
       <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
-        <img src="/images/logo-sm.svg" class="w-8 h-8 p-1 bg-gray-100 shadow-lg rounded" alt="logo">
+        <img src="/Images/logo-sm.svg" class="w-8 h-8 p-1 bg-gray-100 shadow-lg rounded" alt="logo">
         <span class="ml-3 text-xl">Èlectronique</span>
       </a>
       <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2020 Èlectronique —
