--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="hidden sm:mb-8 sm:flex sm:justify-center">
               <div class="relative overflow-hidden rounded-full py-1.5 px-4 text-sm leading-6 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
                 <span class="text-gray-600">
-                  Announcing our next round of [&nbsp; &nbsp; &nbsp;]. <a href="#" class="font-semibold text-blue-600"><span class="absolute inset-0" aria-hidden="true"></span>Read more <span aria-hidden="true">&rarr;</span></a>
+                  Stay tuned for updates on exciting activities and opportunities to get involved in our community <a href="#" class="font-semibold text-blue-600"><span class="absolute inset-0" aria-hidden="true"></span>Read more <span aria-hidden="true">&rarr;</span></a>
                 </span>
               </div>
             </div>
