--- a/src/index.html
+++ b/src/index.html
@@ -179,6 +179,30 @@
             </div>
           </div>
 
+          <div class="py-8 flex flex-wrap md:flex-nowrap">
+            <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
+              <span class="font-semibold title-font text-gray-700">Date</span>
+              <span class="text-sm text-gray-500">TBD</span>
+            </div>
+            <div class="md:flex-grow">
+              <h2 class="text-2xl font-medium text-gray-900 title-font mb-2">
+                Hackathon
+              </h2>
+              <p class="leading-relaxed">
+                Electronique's Chesss Tournament. Face off against your peers in a battle of wits and strategy. Winner gets 
+                a special prize!
+              </p>
+              <a class="text-blue-500 inline-flex items-center mt-4">
+                Register
+                <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none"
+                  stroke-linecap="round" stroke-linejoin="round">
+                  <path d="M5 12h14"></path>
+                  <path d="M12 5l7 7-7 7"></path>
+                </svg>
+              </a>
+            </div>
+          </div>
+
         </div>
       </div>
   </section>
